better server mime types, minified and compressed versions

--- a/configs/blip.ini
+++ b/configs/blip.ini
@@ -14,7 +14,7 @@ board_build.partitions = min_spiffs.csv
 upload_speed = 921600
 monitor_speed = 115200
 
-extra_scripts = post:merge_bin.py
+extra_scripts = post:tools/merge_bin.py
 
 build_unflags =
   -std=gnu++11
