--- a/configs/xiaoc6.ini
+++ b/configs/xiaoc6.ini
@@ -55,6 +55,8 @@ extends =  xiaoc6
 build_flags = 
 	${xiaoc6.build_flags}
 	-D BLIP_XIAOCUBE
+	-D DEVICE_TYPE="\"XIAO C6 Cube\""
+	-D DEVICE_CATEGORY="\"Ben Kuper\""
 	-D USE_SERIAL
 	-D USE_STREAMING
 	-D USE_ARTNET
@@ -86,21 +88,6 @@ build_flags =
 	-D POWER_EXT=1
 	-D POWER_WAKEUP_BUTTON=2
 	-D POWER_WAKEUP_BUTTON_STATE=true
-
-
-[env:xiaobridge]
-extends = xiaoc6 
-build_flags = 
-	${xiaoc6.build_flags}
-	-D BLIP_XIAOBRIDGE
-	-D USE_SERIAL
-	-D USE_FILES
-	-D FILES_TYPE_LittleFS
-	-D USE_IO
-	-D WIFI_C6_USE_EXTERNAL_ANTENNA
-	-D USE_ARTNET
-	-D ESPNOW_BRIDGE
-
 
 [env:xiaoc6garden]
 extends = xiaoc6
