--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+
 [platformio]
 description = Unified firmware for ESP32 Devices
  
@@ -18,4 +19,4 @@ extra_configs =
 	configs/olimex.ini
 	configs/xiaoc6.ini
 
-default_envs = creatorsball
+default_envs = creatorsnode
