--- a/.github/workflows/bleeding-edge.yml
+++ b/.github/workflows/bleeding-edge.yml
@@ -1,4 +1,4 @@
-name: Publish Bleeding Edge Dashboard
+name: Publish Bleeding Edge Builds
 
 on:
   push:
@@ -19,10 +19,25 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install tooling deps
+      - name: Install PlatformIO and tooling deps
         run: |
           python -m pip install --upgrade pip
-          pip install requests
+          pip install platformio requests
+
+      - name: Build bleeding edge firmware
+        env:
+          FIRMWARE_VERSION_LABEL: bleeding-edge
+          FIRMWARE_BUILD_CHANNEL: bleeding-edge
+        run: |
+          set -euo pipefail
+          export FIRMWARE_GENERATED_AT="$(date -u +"%Y-%m-%dT%H:%M:%SZ")"
+          python tools/build_all.py -j 1 -u
+
+      - name: Upload firmware artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: firmware-bleeding-edge
+          path: export
 
       - name: Minify firstrun helper
         run: python tools/minify_firstrun.py
