b word to launch ci

--- a/.github/workflows/bleeding-edge.yml
+++ b/.github/workflows/bleeding-edge.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   dashboard:
+    if: ${{ github.event.head_commit.message && contains(github.event.head_commit.message, 'bleeding') }}
     runs-on: ubuntu-latest
     env:
       PIO_CORE_CALLER: gha
