--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -35,7 +35,7 @@ jobs:
           SERVER_UPLOAD_URL: ${{ secrets.BLIP_SERVER_UPLOAD_URL }}
         run: |
           set -euo pipefail
-          declare -a cmd=(python tools/package_and_upload_server.py --version-label bleeding-edge --manifest-name bleeding-edge.json)
+          declare -a cmd=(python tools/package_and_upload_server.py --version-label bleeding-edge --manifest-name bleeding-edge.json --alias-manifest latest.json)
           if [ -n "${SERVER_UPLOAD_URL:-}" ]; then
             cmd+=(--upload-url "$SERVER_UPLOAD_URL")
           else
@@ -49,6 +49,7 @@ jobs:
           name: server-bleeding-edge
           path: |
             export/releases/bleeding-edge.json
+            export/releases/latest.json
             export/releases/server-compressed-bleeding-edge.zip
 
       - name: Package versioned dashboard
