fix ESPNow optimalRange

--- a/configs/creator.ini
+++ b/configs/creator.ini
@@ -36,6 +36,7 @@ lib_deps =
 	https://github.com/adafruit/Adafruit_BNO055.git
 	adafruit/Adafruit Unified Sensor
 	adafruit/Adafruit BusIO
+	fastled/FastLED@^3.10.3
 
 [env:creatorsclub]
 board = esp32dev
@@ -113,10 +114,12 @@ build_flags =
 	-D USE_LEDSTRIP
 	-D USE_STREAMING
 
+	-D LED_USE_FASTLED
+
 	-D LED_BRIGHTNESS_FACTOR=0.4f
 	-D LED_DEFAULT_MAX_POWER=1200
 	-D LED_DEFAULT_COUNT=32
-	-D LED_MAX_COUNT=1000
+	-D LED_MAX_COUNT=800
 	-D LED_DEFAULT_EN_PIN=27
 	-D LED_DEFAULT_DATA_PIN=25
 	-D LED_DEFAULT_CLK_PIN=-1
@@ -236,7 +239,6 @@ build_flags =
 
 lib_deps = 
 	${creatorsnodebase.lib_deps}
-	fastled/FastLED@^3.10.3
 
 [env:creatorsnode]
 extends = creatorsnodebase
