--- a/configs/xiaoc6.ini
+++ b/configs/xiaoc6.ini
@@ -107,13 +107,13 @@ build_flags =
 	-D WIFI_C6_USE_EXTERNAL_ANTENNA
 
 	-D USE_LEDSTRIP
-	; -D LED_USE_FASTLED
+	-D LED_USE_FASTLED
 	-D LEDSTRIP_MAX_COUNT=1
 	-D LED_DEFAULT_DATA_PIN=19
 	-D LED_DEFAULT_TYPE=WS2815
 	-D LED_DEFAULT_COUNT=300
-	-D LED_MAX_COUNT=1000
-	-D LED_DEFAULT_COLOR_ORDER=NEO_RGB
+	-D LED_MAX_COUNT=2000
+	-D LED_DEFAULT_COLOR_ORDER=RGB
 	-D LED_EN_NO_OPEN_DRAIN
 	-D LED_DEFAULT_BRIGHTNESS=1.0f
 	
@@ -131,7 +131,7 @@ build_flags =
 
 lib_deps = 
 	${xiaoc6.lib_deps}
-	; fastled/FastLED@^3.10.3
+	fastled/FastLED@^3.10.3
 	https://github.com/schnoog/vl53l0x-arduino-mod.git
 	ArduinoOTA
 
