add DIPSwitchComponent, fix c6 touchRead not available

--- a/configs/blip.ini
+++ b/configs/blip.ini
@@ -13,6 +13,7 @@ board_build.mcu = esp32
 board_build.partitions = min_spiffs.csv
 upload_speed = 921600
 monitor_speed = 115200
+monitor_filters = esp32_exception_decoder
 
 extra_scripts = post:tools/merge_bin.py
 
