--- a/configs/creators.ini
+++ b/configs/creators.ini
@@ -114,12 +114,12 @@ build_flags =
 	-D USE_LEDSTRIP
 	-D USE_STREAMING
 
-	-D LED_USE_FASTLED
+	; -D LED_USE_FASTLED
 
 	-D LED_BRIGHTNESS_FACTOR=0.4f
 	-D LED_DEFAULT_MAX_POWER=1200
 	-D LED_DEFAULT_COUNT=32
-	-D LED_MAX_COUNT=800
+	-D LED_MAX_COUNT=200
 	-D LED_DEFAULT_EN_PIN=27
 	-D LED_DEFAULT_DATA_PIN=25
 	-D LED_DEFAULT_CLK_PIN=-1
@@ -277,3 +277,66 @@ build_flags =
 
 lib_deps = 
 	${creatorsnodebase.lib_deps}
+
+[creatorsbridge]
+extends = blip
+board = esp32-c6-devkitm-1
+board_build.mcu = esp32c6
+board_build.f_cpu = 160000000L 
+build_flags = 
+	${blip.build_flags}
+
+	-D ESPNOW_BRIDGE
+	-D ESPNOW_PAIRING_PRESSCOUNT=2
+	-D USE_STREAMING
+
+	-D USE_FILES
+	-D FILES_TYPE_LittleFS
+
+
+
+[env:disneybridgeA0]
+extends = creatorsbridge
+build_flags =
+	${creatorsbridge.build_flags}
+	-D BLIP_DISNEYBRIDGE
+	-D DEVICE_TYPE="\"Flowtoys Disney Bridge\""
+	-D DEVICE_CATEGORY="\"General\""
+
+	-D VIDS="\"0x303a\""
+	-D PIDS="\"0x1001\""
+
+	-D ARDUINO_USB_MODE=1
+	-D ARDUINO_USB_CDC_ON_BOOT=1
+
+	-D BUTTON_MAX_COUNT=1
+	-D BUTTON_DEFAULT_PIN=6
+	-D BUTTON_DEFAULT_MODE=D_INPUT_PULLDOWN
+
+	-D USE_IO
+	-D IO_MAX_COUNT=4
+	-D IO_DEFAULT_MODE=IOComponent::PinMode::A_OUTPUT
+	-D IO_DEFAULT_PIN=1
+
+	-D USE_DIPSWITCH
+	-D DIPSWITCH_I2C
+	-D DIPSWITCH_I2C_PIN_SDA=23
+	-D DIPSWITCH_I2C_PIN_SCL=22
+	-D DIPSWITCH_INTERRUPT_PIN=21
+	-D DIPSWITCH_EXTRA_PIN=19
+
+	-D USE_DMX
+	-D DMX_ACTIVITY_LED_PIN=3
+	-D DMX_DI_PIN=4
+	-D DMX_DO_PIN=5
+	-D DMX_RO_PIN=12
+	
+	-D DMX_MAX_CHANNELS=10
+	-D DMX_ADDRESS_FROM_DIPSWITCH
+
+lib_deps = 
+	${creatorsbridge.lib_deps}
+	https://github.com/janelia-arduino/TCA6408.git
+
+	
+
