--- a/configs/olimex.ini
+++ b/configs/olimex.ini
@@ -29,6 +29,8 @@ build_flags =
 	-D DEVICE_TYPE="\"Olimex POE Bridge\""
 	-D DEVICE_CATEGORY="\"General\""
 
+	-D USE_ARTNET
+
 	-D ESPNOW_DEFAULT_ENABLED=true
 	-D ESPNOW_BRIDGE
 	-D ESPNOW_PAIRING_PRESSCOUNT=2
