--- a/platformio.ini
+++ b/platformio.ini
@@ -14,9 +14,9 @@ description = Unified firmware for ESP32 Devices
  
 extra_configs = 
 	configs/blip.ini
-	configs/creator.ini
+	configs/creators.ini
 	configs/m5stick.ini
 	configs/olimex.ini
 	configs/xiaoc6.ini
 
-default_envs = creatorstab
+default_envs = disneybridgeA0
