--- a/configs/creators.ini
+++ b/configs/creators.ini
@@ -5,7 +5,6 @@ build_flags =
 	-D USE_LEDSTRIP
 	-D DEVICE_CATEGORY="\"Creators\""
 
-	-D USE_STREAMING
 	-D USE_ARTNET
 
 	-D PLAYBACK_USE_ALPHA
@@ -52,7 +51,6 @@ build_flags =
 	-D POWER_WAKEUP_BUTTON_STATE=true
 
 	-D USE_LEDSTRIP
-	-D USE_STREAMING
 
 	-D LED_USE_FASTLED
 
@@ -112,7 +110,6 @@ build_flags =
 	-D POWER_WAKEUP_BUTTON_STATE=true
 
 	-D USE_LEDSTRIP
-	-D USE_STREAMING
 
 	; -D LED_USE_FASTLED
 
@@ -186,7 +183,6 @@ build_flags =
 
 	; -D USE_16BIT_COLOR
 	-D USE_LEDSTRIP
-	-D USE_STREAMING
 	-D LED_DEFAULT_MAX_POWER=0
 
 	-D LED_DEFAULT_EN_PIN=20
@@ -288,7 +284,6 @@ build_flags =
 
 	-D ESPNOW_BRIDGE
 	-D ESPNOW_PAIRING_PRESSCOUNT=2
-	-D USE_STREAMING
 
 	-D USE_FILES
 	-D FILES_TYPE_LittleFS
@@ -327,9 +322,9 @@ build_flags =
 
 	-D USE_DMX
 	-D DMX_ACTIVITY_LED_PIN=3
-	-D DMX_DI_PIN=4
-	-D DMX_DO_PIN=5
-	-D DMX_RO_PIN=12
+	-D DMX_RECEIVE_PIN=4
+	-D DMX_OUTPUT_PIN=12
+	-D DMX_ENABLE_PIN=5
 	
 	-D DMX_MAX_CHANNELS=10
 	-D DMX_ADDRESS_FROM_DIPSWITCH
@@ -337,6 +332,6 @@ build_flags =
 lib_deps = 
 	${creatorsbridge.lib_deps}
 	https://github.com/janelia-arduino/TCA6408.git
-
+	someweisguy/esp_dmx@^4.1.0
 	
 
