xiaoc6 generic script, fix streaminglayer macro, fix refactor typos

--- a/configs/creators.ini
+++ b/configs/creators.ini
@@ -289,7 +289,6 @@ build_flags =
 	-D FILES_TYPE_LittleFS
 
 
-
 [env:disneybridgeA0]
 extends = creatorsbridge
 build_flags =
@@ -304,6 +303,7 @@ build_flags =
 	-D ARDUINO_USB_MODE=1
 	-D ARDUINO_USB_CDC_ON_BOOT=1
 
+	-D USE_BUTTON
 	-D BUTTON_MAX_COUNT=1
 	-D BUTTON_DEFAULT_PIN=6
 	-D BUTTON_DEFAULT_MODE=D_INPUT_PULLDOWN
@@ -322,8 +322,8 @@ build_flags =
 
 	-D USE_DMX
 	-D DMX_ACTIVITY_LED_PIN=3
-	-D DMX_RECEIVE_PIN=4
-	-D DMX_OUTPUT_PIN=12
+	-D DMX_RECEIVE_PIN=0
+	-D DMX_OUTPUT_PIN=4
 	-D DMX_ENABLE_PIN=5
 	
 	-D DMX_MAX_CHANNELS=10
