--- a/configs/xiaoc6.ini
+++ b/configs/xiaoc6.ini
@@ -30,6 +30,8 @@ build_flags =
 	-D POWER_WAKEUP_BUTTON=2
 	-D POWER_WAKEUP_BUTTON_STATE=true
 
+	-D USE_SCRIPT
+	
 	-D USE_LEDSTRIP
 	-D LED_USE_FASTLED
 	-D LEDSTRIP_MAX_COUNT=1
