fix script param update glitch and add script dmx param support

--- a/configs/xiaoc6.ini
+++ b/configs/xiaoc6.ini
@@ -4,6 +4,8 @@ extends = blip
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
 board = seeed_xiao_esp32c6
 board_build.mcu = esp32c6
+board_build.f_cpu = 160000000L
+; build_type = debug
 
 [env:xiaoc6generic]
 extends = xiaoc6
@@ -37,14 +39,14 @@ build_flags =
 	-D LEDSTRIP_MAX_COUNT=1
 	-D LED_DEFAULT_DATA_PIN=17
 	-D LED_DEFAULT_CLK_PIN=19
-	-D LED_DEFAULT_COUNT=200
+	-D LED_DEFAULT_COUNT=150
 	-D LED_MAX_COUNT=1000
 	-D LED_DEFAULT_TYPE=SK9822
 	-D LED_DEFAULT_COLOR_ORDER=BGR
 	-D LED_DEFAULT_INVERT_DIRECTION=false
 	-D LED_DEFAULT_BRIGHTNESS=0.6f
 	-D LED_BRIGHTNESS_FACTOR=0.4f
-	-D LED_DEFAULT_MAX_POWER=2000
+	-D LED_DEFAULT_MAX_POWER=1600
 	-D LED_LEDS_PER_PIXEL=1
 	
 lib_deps = 
