--- a/configs/olimex.ini
+++ b/configs/olimex.ini
@@ -1,35 +1,29 @@
-
 [olimex]
-extends = blip
+extends = blip, component.net, component.ethernet, component.files
 board = esp32-poe-iso
 build_flags = 
 	${blip.build_flags}
-	-D USE_ETHERNET
 	-D WIFI_DEFAULT_MODE=MODE_ETH
 	; -D USE_IO
 	; -D USE_BUTTON
 	-D BUTTON_MAX_COUNT=1
 	-D BUTTON_DEFAULT_PIN=3
-	-D USE_FILES
 	-D FILES_TYPE_LittleFS
 
 	-D VIDS="\"0x1a86\""
 	-D PIDS="\"0x7523\""
 	
-lib_deps = 
-	${blip.lib_deps}
-	FS
 
 
 [env:poebridge]
-extends = olimex 
+extends = olimex, component.artnet, component.espnow
 
 build_flags = 
 	${olimex.build_flags}
 	-D DEVICE_TYPE="\"Olimex POE Bridge\""
 	-D DEVICE_CATEGORY="\"General\""
 
-	-D USE_ARTNET
+	; component-based toggles
 
 	-D ESPNOW_DEFAULT_ENABLED=true
 	-D ESPNOW_BRIDGE
