--- a/configs/xiaoc6.ini
+++ b/configs/xiaoc6.ini
@@ -1,138 +1,105 @@
 
-[xiaoc6]
-extends = blip
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
-board = seeed_xiao_esp32c6
-board_build.mcu = esp32c6
-board_build.f_cpu = 160000000L
-; build_type = debug
+; [xiaoc6]
+; extends = blip
+; platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
+; board = seeed_xiao_esp32c6
+; board_build.mcu = esp32c6
+; board_build.f_cpu = 160000000L
+; ; build_type = debug
 
-[env:xiaoc6generic]
-extends = xiaoc6
-build_flags = 
-	${xiaoc6.build_flags}
-	-D DEVICE_TYPE="\"XIAO C6 Generic\""
+; ; Keep this for envs that still reference `${xiaoc6.lib_deps}`.
+; lib_deps =
+; 	${blip.lib_deps}
+
+; [env:xiaoc6generic]
+; extends = xiaoc6, component.net, component.artnet, component.files, component.io, component.button, component.battery, component.power, component.script, component.ledstrip
+; build_flags = 
+; 	${xiaoc6.build_flags}
+; 	-D DEVICE_TYPE="\"XIAO C6 Generic\""
 	
-	-DARDUINO_USB_MODE=1
-	-DARDUINO_USB_CDC_ON_BOOT=1
+; 	-DARDUINO_USB_MODE=1
+; 	-DARDUINO_USB_CDC_ON_BOOT=1
 
-	-D USE_SERIAL
-	-D USE_ARTNET
-	-D USE_FILES
-	-D FILES_TYPE_LittleFS
-	-D USE_IO
-	-D IO_DEFAULT_MODE=IOComponent::PinMode::D_OUTPUT
-	-D WIFI_C6_USE_EXTERNAL_ANTENNA
-	-D USE_BUTTON
-	-D BUTTON_DEFAULT_PIN=2
-	-D USE_BATTERY
-	-D BATTERY_DEFAULT_PIN=0
-	-D USE_POWER
-	-D POWER_EXT=1
-	-D POWER_WAKEUP_BUTTON=2
-	-D POWER_WAKEUP_BUTTON_STATE=true
+; 	-D FILES_TYPE_LittleFS
+; 	-D IO_DEFAULT_MODE=IOComponent::PinMode::D_OUTPUT
+; 	-D WIFI_C6_USE_EXTERNAL_ANTENNA
+; 	-D BUTTON_DEFAULT_PIN=2
+; 	-D BATTERY_DEFAULT_PIN=0
+; 	-D POWER_EXT=1
+; 	-D POWER_WAKEUP_BUTTON=2
+; 	-D POWER_WAKEUP_BUTTON_STATE=true
 
-	-D USE_SCRIPT
+; 	-D LED_USE_FASTLED
+; 	-D LEDSTRIP_MAX_COUNT=1
+; 	-D LED_DEFAULT_DATA_PIN=17
+; 	-D LED_DEFAULT_CLK_PIN=19
+; 	-D LED_DEFAULT_COUNT=150
+; 	-D LED_MAX_COUNT=1000
+; 	-D LED_DEFAULT_TYPE=SK9822
+; 	-D LED_DEFAULT_COLOR_ORDER=BGR
+; 	-D LED_DEFAULT_INVERT_DIRECTION=false
+; 	-D LED_DEFAULT_BRIGHTNESS=0.6f
+; 	-D LED_BRIGHTNESS_FACTOR=0.4f
+; 	-D LED_DEFAULT_MAX_POWER=1600
+; 	-D LED_LEDS_PER_PIXEL=1
+
+; [env:xiaocube]
+; extends = xiaoc6, component.net, component.artnet, component.pwmled, component.files, component.io, component.button, component.battery, component.power
+; build_flags = 
+; 	${xiaoc6.build_flags}
+; 	-D BLIP_XIAOCUBE
+; 	-D DEVICE_TYPE="\"XIAO C6 Cube\""
+; 	-D DEVICE_CATEGORY="\"Ben Kuper\""
+; 	-D USE_16BIT_COLOR
+; 	-D PWMLED_MAX_COUNT=4
+; 	-D PWMLED_SHOW_INIT
+; 	-D PWMLED_SHOW_SHUTDOWN
+; 	-D PWMLED_SHOW_CONNECTION
+; 	-D PWMLED_DEFAULT_RPIN=17
+; 	-D PWMLED_DEFAULT_GPIN=19
+; 	-D PWMLED_DEFAULT_BPIN=20
+; 	-D PWMLED_DEFAULT_WPIN=18
+; 	-D PWMLED_USE_STREAMING
+; 	-D PWMLED_DEFAULT_16BIT_STREAM=true 
+; 	-D PWMLED_DEFAULT_RESOLUTION=14 
+; 	-D PWMLED_DEFAULT_FREQUENCY=1 
+; 	-D FILES_TYPE_LittleFS
+; 	-D IO_DEFAULT_PIN=15
+; 	-D IO_DEFAULT_MODE=IOComponent::PinMode::D_OUTPUT
+; 	-D WIFI_C6_USE_EXTERNAL_ANTENNA
+; 	-D BUTTON_DEFAULT_PIN=2
+; 	-D BATTERY_DEFAULT_PIN=0
+; 	-D POWER_EXT=1
+; 	-D POWER_WAKEUP_BUTTON=2
+; 	-D POWER_WAKEUP_BUTTON_STATE=true
+
+; [env:xiaoc6garden]
+; extends = xiaoc6, component.net, component.artnet, component.files, component.ledstrip, component.button, component.distance, component.script
+; build_flags =
+; 	${xiaoc6.build_flags}
+; 	-D DEVICE_TYPE="\"XIAO C6 Garden\""
+; 	-D DEVICE_CATEGORY="\"Ben Kuper\""
+
+; 	-D BLIP_XIAOGARDEN
+
+; 	-D FILES_TYPE_LittleFS
+
+; 	-D WIFI_C6_USE_EXTERNAL_ANTENNA
+
+; 	-D LED_USE_FASTLED
+; 	-D LEDSTRIP_MAX_COUNT=1
+; 	-D LED_DEFAULT_DATA_PIN=19
+; 	-D LED_DEFAULT_TYPE=WS2815
+; 	-D LED_DEFAULT_COUNT=300
+; 	-D LED_MAX_COUNT=2000
+; 	-D LED_DEFAULT_COLOR_ORDER=RGB
+; 	-D LED_EN_NO_OPEN_DRAIN
+; 	-D LED_DEFAULT_BRIGHTNESS=1.0f
 	
-	-D USE_LEDSTRIP
-	-D LED_USE_FASTLED
-	-D LEDSTRIP_MAX_COUNT=1
-	-D LED_DEFAULT_DATA_PIN=17
-	-D LED_DEFAULT_CLK_PIN=19
-	-D LED_DEFAULT_COUNT=150
-	-D LED_MAX_COUNT=1000
-	-D LED_DEFAULT_TYPE=SK9822
-	-D LED_DEFAULT_COLOR_ORDER=BGR
-	-D LED_DEFAULT_INVERT_DIRECTION=false
-	-D LED_DEFAULT_BRIGHTNESS=0.6f
-	-D LED_BRIGHTNESS_FACTOR=0.4f
-	-D LED_DEFAULT_MAX_POWER=1600
-	-D LED_LEDS_PER_PIXEL=1
-	
-lib_deps = 
-	${xiaoc6.lib_deps}
-	FastLED
+; 	-D BUTTON_DEFAULT_PIN=2
+; 	-D BUTTON_DEFAULT_MODE=D_INPUT_PULLUP
+; 	-D BUTTON_DEFAULT_INVERTED=true
 
-[env:xiaocube]
-extends =  xiaoc6
-build_flags = 
-	${xiaoc6.build_flags}
-	-D BLIP_XIAOCUBE
-	-D DEVICE_TYPE="\"XIAO C6 Cube\""
-	-D DEVICE_CATEGORY="\"Ben Kuper\""
-	-D USE_SERIAL
-	-D USE_ARTNET
-	-D USE_PWMLED
-	-D USE_16BIT_COLOR
-	-D PWMLED_MAX_COUNT=4
-	-D PWMLED_SHOW_INIT
-	-D PWMLED_SHOW_SHUTDOWN
-	-D PWMLED_SHOW_CONNECTION
-	-D PWMLED_DEFAULT_RPIN=17
-	-D PWMLED_DEFAULT_GPIN=19
-	-D PWMLED_DEFAULT_BPIN=20
-	-D PWMLED_DEFAULT_WPIN=18
-	-D PWMLED_USE_STREAMING
-	-D PWMLED_DEFAULT_16BIT_STREAM=true 
-	-D PWMLED_DEFAULT_RESOLUTION=14 
-	-D PWMLED_DEFAULT_FREQUENCY=1 
-	-D USE_FILES
-	-D FILES_TYPE_LittleFS
-	-D USE_IO
-	-D IO_DEFAULT_PIN=15
-	-D IO_DEFAULT_MODE=IOComponent::PinMode::D_OUTPUT
-	-D WIFI_C6_USE_EXTERNAL_ANTENNA
-	-D USE_BUTTON
-	-D BUTTON_DEFAULT_PIN=2
-	-D USE_BATTERY
-	-D BATTERY_DEFAULT_PIN=0
-	-D USE_POWER
-	-D POWER_EXT=1
-	-D POWER_WAKEUP_BUTTON=2
-	-D POWER_WAKEUP_BUTTON_STATE=true
-
-[env:xiaoc6garden]
-extends = xiaoc6
-build_flags =
-	${xiaoc6.build_flags}
-	-D DEVICE_TYPE="\"XIAO C6 Garden\""
-	-D DEVICE_CATEGORY="\"Ben Kuper\""
-
-	-D BLIP_XIAOGARDEN
-
-	-D USE_SERIAL
-	-D USE_ARTNET
-	-D USE_FILES
-	-D FILES_TYPE_LittleFS
-
-	-D WIFI_C6_USE_EXTERNAL_ANTENNA
-
-	-D USE_LEDSTRIP
-	-D LED_USE_FASTLED
-	-D LEDSTRIP_MAX_COUNT=1
-	-D LED_DEFAULT_DATA_PIN=19
-	-D LED_DEFAULT_TYPE=WS2815
-	-D LED_DEFAULT_COUNT=300
-	-D LED_MAX_COUNT=2000
-	-D LED_DEFAULT_COLOR_ORDER=RGB
-	-D LED_EN_NO_OPEN_DRAIN
-	-D LED_DEFAULT_BRIGHTNESS=1.0f
-	
-	-D USE_BUTTON
-	-D BUTTON_DEFAULT_PIN=2
-	-D BUTTON_DEFAULT_MODE=D_INPUT_PULLUP
-	-D BUTTON_DEFAULT_INVERTED=true
-
-	-D USE_DISTANCE
-	-D DISTANCE_MAX_COUNT=1
-	-D DISTANCE_SENSOR_VL53L0X
-
-	-D USE_SCRIPT
-	
-
-lib_deps = 
-	${xiaoc6.lib_deps}
-	fastled/FastLED@^3.10.3
-	https://github.com/schnoog/vl53l0x-arduino-mod.git
-	ArduinoOTA
+; 	-D DISTANCE_MAX_COUNT=1
+; 	-D DISTANCE_SENSOR_VL53L0X
 
