--- a/platformio.ini
+++ b/platformio.ini
@@ -13,10 +13,11 @@
 description = Unified firmware for ESP32 Devices
  
 extra_configs = 
+	configs/components.ini
 	configs/blip.ini
 	configs/creators.ini
 	configs/m5stick.ini
 	configs/olimex.ini
 	configs/xiaoc6.ini
-
-default_envs = xiaoc6generic 
+	
+default_envs = creatorsball
