--- a/configs/blip.ini
+++ b/configs/blip.ini
@@ -1,11 +1,13 @@
 
 [blip]
+extends = net, files
 framework = arduino
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
 
 lib_compat_mode = strict
 lib_ldf_mode = chain
 
+board = esp32dev
 board_build.f_cpu = 240000000L
 board_build.f_flash = 40000000L
 board_build.flash_mode = dio
@@ -37,52 +39,26 @@ build_flags =
 	-Wl,-Map,firmware.map        ; emits a useful map to see where IRAM goes
 	; -D CORE_DEBUG_LEVEL=0        ; strip debug
 
-	-D USE_SERIAL
-	-D USE_SERVER
-	-D WS_MAX_QUEUED_MESSAGES=16
-	-D CONFIG_ASYNC_TCP_RUNNING_CORE=1
-	-D CONFIG_ASYNC_TCP_USE_WDT=0
-	-D USE_WIFI
-	-D USE_OSC
-
-	-D USE_ESPNOW
-	-D ESPNOW_ENABLED_PRESSCOUNT=5
-
-	-D USE_OTA
+	${net.build_flags}
+	${files.build_flags}
 
 lib_deps = 
-	adafruit/Adafruit NeoPixel@^1.10.0
+	${net.lib_deps}
+	${files.lib_deps}
 	Wire
 	SPI
 	Preferences
-	WiFi
 	bblanchon/ArduinoJson @ ^6.18.5
-	SD
-	LittleFS
-	ESPmDNS
-	adafruit/Adafruit DotStar @ ^1.2.0
 	https://github.com/contrem/arduino-timer
-	wasm3/Wasm3 @ ^0.5.0
-	https://github.com/jshaw/SimplexNoise
-	https://github.com/rstephan/ArtnetWifi
-	ESP32Async/ESPAsyncWebServer@ ^3.7.9
-  	ESP32Async/AsyncTCP
-	https://github.com/CNMAT/OSC
 
 build_src_filter = +<main.cpp> +<UnityIncludes.cpp> +<RootComponent.cpp>
 
 
-[env:generic]
+[c6board]
 extends = blip
-board = esp32dev
+board = esp32-c6-devkitm-1
+board_build.mcu = esp32c6
+board_build.f_cpu = 160000000L
+
 build_flags = 
-	${blip.build_flags}
-	-D BLIP_GENERIC
-
-	-D USE_ARTNET
-	
-	
-	-D USE_PWMLED
-	-D PWMLED_MAX_COUNT=4
-	-D TESTMODE_PRESSCOUNT=6
-
+	-D C6_BOARD
