--- a/configs/creators.ini
+++ b/configs/creators.ini
@@ -1,337 +1,333 @@
 [creators]
-extends = blip
+extends = blip, ledstrip, artnet, fx, button, battery,  script, motion, espnow, power, ir
 build_flags = 
 	${blip.build_flags}
-	-D USE_LEDSTRIP
+	${ledstrip.build_flags}
+	${artnet.build_flags}
+	${fx.build_flags}
+	${button.build_flags}
+	${battery.build_flags}
+	${script.build_flags}
+	${motion.build_flags}
+	${espnow.build_flags}
+	${power.build_flags}
+	${ir.build_flags}
 	-D DEVICE_CATEGORY="\"Creators\""
-
-	-D USE_ARTNET
-
-	-D PLAYBACK_USE_ALPHA
-	-D PLAYBACK_MAX_SCRIPTS=32
-	-D USE_FX
-	-D USE_BUTTON
-	-D BUTTON_MAX_COUNT=4
-	-D USE_BATTERY
-
-	-D BATTERY_DEFAULT_RAW_MIN=222
-	-D BATTERY_DEFAULT_RAW_MAX=335
-	-D BATTERY_DEFAULT_LOW_VOLTAGE=3.5f
-	-D USE_FILES
-	-D USE_SCRIPT
-	-D FILES_DEFAULT_SPEED=12000000
-	-D FILES_DEFAULT_POWER_VALUE=LOW
-
-	-D USE_MOTION
-	-D IMU_TYPE_BNO055
-	-D IMU_DEFAULT_ADDR=0x28
-
-	-D USE_ESPNOW
-	-D ESPNOW_DEFAULT_ENABLED=false
-	-D ESPNOW_ENABLED_PRESSCOUNT=5
 
 lib_deps = 
 	${blip.lib_deps}
-	https://github.com/adafruit/Adafruit_BNO055.git
-	adafruit/Adafruit Unified Sensor
-	adafruit/Adafruit BusIO
-	fastled/FastLED@^3.10.3
-
-[env:creatorsclub]
-board = esp32dev
-extends = creators
-build_flags = 
-	${creators.build_flags}
-	-D BLIP_CREATORSCLUB
-	-D DEVICE_TYPE="\"Creators Club\""
-
-	-D USE_POWER
-	-D POWER_WAKEUP_BUTTON=32
-	-D POWER_KEEP_PIN=12
-	-D POWER_WAKEUP_BUTTON_STATE=true
-
-	-D USE_LEDSTRIP
-
-	-D LED_USE_FASTLED
-
-	-D LED_BRIGHTNESS_FACTOR=0.4f
-	-D LED_DEFAULT_MAX_POWER=1200
-	-D LED_DEFAULT_COUNT=32
-	-D LED_MAX_COUNT=32
-	-D LED_DEFAULT_EN_PIN=27
-	-D LED_DEFAULT_DATA_PIN=25
-	-D LED_DEFAULT_CLK_PIN=26
-	-D LED_DEFAULT_TYPE=SK9822
-	-D LED_DEFAULT_COLOR_ORDER=BGR
-	-D LED_DEFAULT_INVERT_DIRECTION=true
-	-D LED_LEDS_PER_PIXEL=3 ; 96 leds for 32 pixels, average 3 LEDs per pixel4
+	${ledstrip.lib_deps}
+	${artnet.lib_deps}
+	${script.lib_deps}
+	${motion.lib_deps}
 	
-	-D IMU_DEFAULT_INT=33
-	-D IMU_DEFAULT_SDA=23
-	-D IMU_DEFAULT_SCL=22
-
-	-D FILES_TYPE_SD
-	-D FILES_DEFAULT_EN=16
-	-D FILES_DEFAULT_MISO=19
-	-D FILES_DEFAULT_MOSI=13
-	-D FILES_DEFAULT_SCK=14
-	-D FILES_DEFAULT_CS=15
-
-	-D BUTTON_DEFAULT_PIN=32
-	-D BUTTON_DEFAULT_MODE=D_INPUT
-
-	-D BATTERY_DEFAULT_PIN=35
-	-D BATTERY_DEFAULT_CHARGE_PIN=3
-	-D BATTERY_CHARGE_PIN_MODE=INPUT
-
-	-D USE_IR
-	-D IR_DEFAULT_PIN=17
-
-	-D VIDS="0x10c4,0x0c"
-	-D PIDS="0xea60,0xd0"
-
-lib_deps = 
-	${creators.lib_deps}
-	fastled/FastLED@^3.10.1
-
-	
-[env:creatorstab]
-board = esp32dev
-extends = creators
-
-build_flags = 
+[creatorsc6]
+extends = creators, c6board
+build_flags =
 	${creators.build_flags}
-	-D BLIP_CREATORSTAB
-	-D DEVICE_TYPE="\"Creators Tab\""
-
-	-D USE_POWER
-	-D POWER_WAKEUP_BUTTON=36
-	-D POWER_KEEP_PIN=12
-	-D POWER_WAKEUP_BUTTON_STATE=true
-
-	-D USE_LEDSTRIP
-
-	; -D LED_USE_FASTLED
-
-	-D LED_BRIGHTNESS_FACTOR=0.4f
-	-D LED_DEFAULT_MAX_POWER=1200
-	-D LED_DEFAULT_COUNT=32
-	-D LED_MAX_COUNT=200
-	-D LED_DEFAULT_EN_PIN=27
-	-D LED_DEFAULT_DATA_PIN=25
-	-D LED_DEFAULT_CLK_PIN=-1
-	-D LED_DEFAULT_TYPE=WS2812B
-	-D LED_DEFAULT_COLOR_ORDER=NEO_GRB
-	-D LED_LEDS_PER_PIXEL=1
-
-	-D IMU_DEFAULT_INT=34
-	-D IMU_DEFAULT_SDA=23
-	-D IMU_DEFAULT_SCL=22
-
-	-D FILES_TYPE_SD
-	-D FILES_DEFAULT_EN=33
-	-D FILES_DEFAULT_MISO=19
-	-D FILES_DEFAULT_MOSI=13
-	-D FILES_DEFAULT_SCK=14
-	-D FILES_DEFAULT_CS=15
-
-	-D BUTTON_DEFAULT_PIN=36
-	-D BUTTON_DEFAULT_MODE=D_INPUT
-
-	-D BATTERY_DEFAULT_PIN=35
-	-D BATTERY_DEFAULT_CHARGE_PIN=39
-	-D BATTERY_CHARGE_PIN_MODE=INPUT_PULLUP
-
-	-D USE_IO
-	-D IO_MAX_COUNT=4
-	-D IO_DEFAULT_MODE=IOComponent::PinMode::A_OUTPUT
-
-	-D VIDS="0x10c4,0x0c"
-	-D PIDS="0xea60,0xd0"
-
-lib_deps = 
-	${creators.lib_deps}
-
-[creatorsnodebase]
-extends = creators
-
-board = esp32-c6-devkitm-1
-board_build.mcu = esp32c6
-board_build.f_cpu = 160000000L 
-	
-build_flags = 
-	${creators.build_flags}
-
+	${c6board.build_flags}
 	-D ARDUINO_USB_MODE=1
-	-D ARDUINO_USB_CDC_ON_BOOT=1
+	-D ARDUINO_USB_CDC_ON_BOOT=1	
 	
-	; -D POWER_EXT=1
-	-D POWER_KEEP_PIN=1
-	-D POWER_WAKEUP_BUTTON=7
-	-D BUTTON_DEFAULT_PIN=7
-	-D BUTTON_DEFAULT_MODE=D_INPUT_PULLDOWN
-	-D BUTTON_DEFAULT_SHUTDOWN=true
-
-	-D BATTERY_DEFAULT_PIN=6
-	-D BATTERY_DEFAULT_CHARGE_PIN=0
-	-D BATTERY_CHARGE_PIN_MODE=INPUT_PULLUP
-	
-    -D BATTERY_READ_MILLIVOLTS
-    -D BATTERY_READ_MILLIVOLTS_MULTIPLIER=2
-	-D BATTERY_CHARGE_LED_PIN=9
-	-D BATTERY_CHARGE_LED_ENABLE_VALUE=LOW
-
-	; -D USE_16BIT_COLOR
-	-D USE_LEDSTRIP
-	-D LED_DEFAULT_MAX_POWER=0
-
-	-D LED_DEFAULT_EN_PIN=20
-	-D LED_LEDS_PER_PIXEL=1
-	-D LED_DEFAULT_CORRECTION=false
-
-	-D LED_CHARGE_DISABLE_PIN=9
-
-	-D USE_IR
-	-D IR_DEFAULT_PIN=18
-	-D IR_DEFAULT_PIN2=19
-
-	-D FILES_TYPE_FLASH
-	
-	-D FILES_DEFAULT_MOSI=4
-	-D FILES_DEFAULT_MISO=5
-	-D FILES_DEFAULT_CS=15
-	-D FILES_DEFAULT_SCK=8
-
-	-D IMU_DEFAULT_SDA=23
-	-D IMU_DEFAULT_SCL=22
-	-D IMU_DEFAULT_INT=-1
-	-D IMU_EXT_CRYSTAL=0x80
-
-	-D USE_BEHAVIOUR
-	-D BEHAVIOUR_MAX_COUNT=4
-
 lib_deps = 
 	${creators.lib_deps}
+	${c6board.lib_deps}
 
 [env:creatorsball]
-extends = creatorsnodebase
+extends = creatorsc6
 build_flags =
-    ${creatorsnodebase.build_flags}
+	${creatorsc6.build_flags}
 	-D BLIP_CREATORSBALL
 	-D DEVICE_TYPE="\"Creators Ball\""
 
-	-D LED_USE_FASTLED
-
-    -D LED_DEFAULT_COLOR_ORDER=GRB
-
-    -D LEDSTRIP_MAX_COUNT=1
-    -D LEDSTRIP_DEFAULT_COUNT=1
-	-D LED_BRIGHTNESS_FACTOR=0.6f
-	-D LED_MAX_COUNT=50
-	-D LED_DEFAULT_COUNT=37
 	-D LED_DEFAULT_TYPE=WS2816
+	-D LED_DEFAULT_COLOR_ORDER=GRB
+	-D LED_FIXED_COUNT=37
 	-D LED_DEFAULT_DATA_PIN=3
 	-D LED_DEFAULT_DATA_BACKUP_PIN=2
 
 lib_deps = 
-	${creatorsnodebase.lib_deps}
+	${creatorsc6.lib_deps}
 
-[env:creatorsnode]
-extends = creatorsnodebase
+; lib_deps = 
+; 	${blip.lib_deps}
 
-build_flags =
-    ${creatorsnodebase.build_flags}
-	-D BLIP_CREATORSNODE
-	-D DEVICE_TYPE="\"Creators Node\""
-    -D LED_MAX_COUNT=1000
-    
-    -D LEDSTRIP_MAX_COUNT=2
-	-D LED_BRIGHTNESS_FACTOR=1.0f
+; [env:creatorsclub]
+; board = esp32dev
+; extends = creators, component.power, component.ir
+; build_flags = 
+; 	${creators.build_flags}
+; 	-D BLIP_CREATORSCLUB
+; 	-D DEVICE_TYPE="\"Creators Club\""
+; 	-D POWER_WAKEUP_BUTTON=32
+; 	-D POWER_KEEP_PIN=12
+; 	-D POWER_WAKEUP_BUTTON_STATE=true
 
-    -D LED2_DEFAULT_TYPE=WS2812B
-    -D LED2_DEFAULT_COLOR_ORDER=GRB
-    -D LED2_DEFAULT_COUNT=20
+; 	-D LED_USE_FASTLED
 
-
-[env:creatorsnodestrip]
-extends = creatorsnodebase
-
-build_flags =
-    ${creatorsnodebase.build_flags}
-	-D BLIP_CREATORSNODESTRIP
-    -D DEVICE_TYPE="\"Creators Node Strip\""
-	-D LED_MAX_COUNT=800
-    
-	-DARDUINO_USB_MODE=1
-	-DARDUINO_USB_CDC_ON_BOOT=1
+; 	-D LED_BRIGHTNESS_FACTOR=0.4f
+; 	-D LED_DEFAULT_MAX_POWER=1200
+; 	-D LED_DEFAULT_COUNT=32
+; 	-D LED_MAX_COUNT=32
+; 	-D LED_DEFAULT_EN_PIN=27
+; 	-D LED_DEFAULT_DATA_PIN=25
+; 	-D LED_DEFAULT_CLK_PIN=26
+; 	-D LED_DEFAULT_TYPE=SK9822
+; 	-D LED_DEFAULT_COLOR_ORDER=BGR
+; 	-D LED_DEFAULT_INVERT_DIRECTION=true
+; 	-D LED_LEDS_PER_PIXEL=3 ; 96 leds for 32 pixels, average 3 LEDs per pixel4
 	
-	-D LED_EN_NO_OPEN_DRAIN
-	-D LED_BRIGHTNESS_FACTOR=0.4f
-    -D LED_DEFAULT_DATA_PIN=16
-    -D LED_DEFAULT_TYPE=WS2812B
-    -D LED_DEFAULT_COUNT=100
+; 	-D IMU_DEFAULT_INT=33
+; 	-D IMU_DEFAULT_SDA=23
+; 	-D IMU_DEFAULT_SCL=22
 
-lib_deps = 
-	${creatorsnodebase.lib_deps}
+; 	-D FILES_TYPE_SD
+; 	-D FILES_DEFAULT_EN=16
+; 	-D FILES_DEFAULT_MISO=19
+; 	-D FILES_DEFAULT_MOSI=13
+; 	-D FILES_DEFAULT_SCK=14
+; 	-D FILES_DEFAULT_CS=15
 
-[creatorsbridge]
-extends = blip
-board = esp32-c6-devkitm-1
-board_build.mcu = esp32c6
-board_build.f_cpu = 160000000L 
-build_flags = 
-	${blip.build_flags}
+; 	-D BUTTON_DEFAULT_PIN=32
+; 	-D BUTTON_DEFAULT_MODE=D_INPUT
 
-	-D ESPNOW_BRIDGE
-	-D ESPNOW_PAIRING_PRESSCOUNT=2
+; 	-D BATTERY_DEFAULT_PIN=35
+; 	-D BATTERY_DEFAULT_CHARGE_PIN=3
+; 	-D BATTERY_CHARGE_PIN_MODE=INPUT
 
-	-D USE_FILES
-	-D FILES_TYPE_LittleFS
+; 	-D IR_DEFAULT_PIN=17
 
+; 	-D VIDS="0x10c4,0x0c"
+; 	-D PIDS="0xea60,0xd0"
 
-[env:disneybridgeA0]
-extends = creatorsbridge
-build_flags =
-	${creatorsbridge.build_flags}
-	-D BLIP_DISNEYBRIDGE
-	-D DEVICE_TYPE="\"Flowtoys Disney Bridge\""
-	-D DEVICE_CATEGORY="\"General\""
+; lib_deps = 
+; 	${creators.lib_deps}
 
-	-D VIDS="\"0x303a\""
-	-D PIDS="\"0x1001\""
-
-	-D ARDUINO_USB_MODE=1
-	-D ARDUINO_USB_CDC_ON_BOOT=1
-
-	-D USE_BUTTON
-	-D BUTTON_MAX_COUNT=1
-	-D BUTTON_DEFAULT_PIN=6
-	-D BUTTON_DEFAULT_MODE=D_INPUT_PULLDOWN
-
-	-D USE_IO
-	-D IO_MAX_COUNT=4
-	-D IO_DEFAULT_MODE=IOComponent::PinMode::A_OUTPUT
-	-D IO_DEFAULT_PIN=1
-
-	-D USE_DIPSWITCH
-	-D DIPSWITCH_I2C
-	-D DIPSWITCH_I2C_PIN_SDA=23
-	-D DIPSWITCH_I2C_PIN_SCL=22
-	-D DIPSWITCH_INTERRUPT_PIN=21
-	-D DIPSWITCH_EXTRA_PIN=19
-
-	-D USE_DMX
-	-D DMX_ACTIVITY_LED_PIN=3
-	-D DMX_RECEIVE_PIN=0
-	-D DMX_OUTPUT_PIN=4
-	-D DMX_ENABLE_PIN=5
 	
-	-D DMX_MAX_CHANNELS=10
-	-D DMX_ADDRESS_FROM_DIPSWITCH
+; [env:creatorstab]
+; board = esp32dev
+; extends = creators, component.power, component.io
 
-lib_deps = 
-	${creatorsbridge.lib_deps}
-	https://github.com/janelia-arduino/TCA6408.git
-	https://github.com/benkuper/EasyDMX.git
+; build_flags = 
+; 	${creators.build_flags}
+; 	-D BLIP_CREATORSTAB
+; 	-D DEVICE_TYPE="\"Creators Tab\""
+; 	-D POWER_WAKEUP_BUTTON=36
+; 	-D POWER_KEEP_PIN=12
+; 	-D POWER_WAKEUP_BUTTON_STATE=true
+
+
+; 	; -D LED_USE_FASTLED
+
+; 	-D LED_BRIGHTNESS_FACTOR=0.4f
+; 	-D LED_DEFAULT_MAX_POWER=1200
+; 	-D LED_DEFAULT_COUNT=32
+; 	-D LED_MAX_COUNT=200
+; 	-D LED_DEFAULT_EN_PIN=27
+; 	-D LED_DEFAULT_DATA_PIN=25
+; 	-D LED_DEFAULT_CLK_PIN=-1
+; 	-D LED_DEFAULT_TYPE=WS2812B
+; 	-D LED_DEFAULT_COLOR_ORDER=NEO_GRB
+; 	-D LED_LEDS_PER_PIXEL=1
+
+; 	-D IMU_DEFAULT_INT=34
+; 	-D IMU_DEFAULT_SDA=23
+; 	-D IMU_DEFAULT_SCL=22
+
+; 	-D FILES_TYPE_SD
+; 	-D FILES_DEFAULT_EN=33
+; 	-D FILES_DEFAULT_MISO=19
+; 	-D FILES_DEFAULT_MOSI=13
+; 	-D FILES_DEFAULT_SCK=14
+; 	-D FILES_DEFAULT_CS=15
+
+; 	-D BUTTON_DEFAULT_PIN=36
+; 	-D BUTTON_DEFAULT_MODE=D_INPUT
+
+; 	-D BATTERY_DEFAULT_PIN=35
+; 	-D BATTERY_DEFAULT_CHARGE_PIN=39
+; 	-D BATTERY_CHARGE_PIN_MODE=INPUT_PULLUP
+
+; 	-D IO_MAX_COUNT=4
+; 	-D IO_DEFAULT_MODE=IOComponent::PinMode::A_OUTPUT
+
+; 	-D VIDS="0x10c4,0x0c"
+; 	-D PIDS="0xea60,0xd0"
+
+; lib_deps = 
+; 	${creators.lib_deps}
+
+; [creatorsnodebase]
+; extends = creators, component.ir, component.behaviour
+
+; board = esp32-c6-devkitm-1
+; board_build.mcu = esp32c6
+; board_build.f_cpu = 160000000L 
+	
+; build_flags = 
+; 	${creators.build_flags}
+
+; 	-D ARDUINO_USB_MODE=1
+; 	-D ARDUINO_USB_CDC_ON_BOOT=1
+	
+; 	; -D POWER_EXT=1
+; 	-D POWER_KEEP_PIN=1
+; 	-D POWER_WAKEUP_BUTTON=7
+; 	-D BUTTON_DEFAULT_PIN=7
+; 	-D BUTTON_DEFAULT_MODE=D_INPUT_PULLDOWN
+; 	-D BUTTON_DEFAULT_SHUTDOWN=true
+
+; 	-D BATTERY_DEFAULT_PIN=6
+; 	-D BATTERY_DEFAULT_CHARGE_PIN=0
+; 	-D BATTERY_CHARGE_PIN_MODE=INPUT_PULLUP
+	
+;     -D BATTERY_READ_MILLIVOLTS
+;     -D BATTERY_READ_MILLIVOLTS_MULTIPLIER=2
+; 	-D BATTERY_CHARGE_LED_PIN=9
+; 	-D BATTERY_CHARGE_LED_ENABLE_VALUE=LOW
+
+; 	-D LED_DEFAULT_MAX_POWER=0
+
+; 	-D LED_DEFAULT_EN_PIN=20
+; 	-D LED_LEDS_PER_PIXEL=1
+; 	-D LED_DEFAULT_CORRECTION=false
+
+; 	-D LED_CHARGE_DISABLE_PIN=9
+
+; 	-D IR_DEFAULT_PIN=18
+; 	-D IR_DEFAULT_PIN2=19
+
+; 	-D FILES_TYPE_FLASH
+	
+; 	-D FILES_DEFAULT_MOSI=4
+; 	-D FILES_DEFAULT_MISO=5
+; 	-D FILES_DEFAULT_CS=15
+; 	-D FILES_DEFAULT_SCK=8
+
+; 	-D IMU_DEFAULT_SDA=23
+; 	-D IMU_DEFAULT_SCL=22
+; 	-D IMU_DEFAULT_INT=-1
+; 	-D IMU_EXT_CRYSTAL=0x80
+
+; 	-D BEHAVIOUR_MAX_COUNT=4
+
+; lib_deps = 
+; 	${creators.lib_deps}
+
+; [env:creatorsball]
+; extends = creatorsnodebase
+; build_flags =
+;     ${creatorsnodebase.build_flags}
+; 	-D BLIP_CREATORSBALL
+; 	-D DEVICE_TYPE="\"Creators Ball\""
+
+; 	-D LED_USE_FASTLED
+
+;     -D LED_DEFAULT_COLOR_ORDER=GRB
+
+;     -D LEDSTRIP_MAX_COUNT=1
+;     -D LEDSTRIP_DEFAULT_COUNT=1
+; 	-D LED_BRIGHTNESS_FACTOR=0.6f
+; 	-D LED_MAX_COUNT=50
+; 	-D LED_DEFAULT_COUNT=37
+; 	-D LED_DEFAULT_TYPE=WS2816
+; 	-D LED_DEFAULT_DATA_PIN=3
+; 	-D LED_DEFAULT_DATA_BACKUP_PIN=2
+
+; lib_deps = 
+; 	${creatorsnodebase.lib_deps}
+
+; [env:creatorsnode]
+; extends = creatorsnodebase
+
+; build_flags =
+;     ${creatorsnodebase.build_flags}
+; 	-D BLIP_CREATORSNODE
+; 	-D DEVICE_TYPE="\"Creators Node\""
+;     -D LED_MAX_COUNT=1000
+    
+;     -D LEDSTRIP_MAX_COUNT=2
+; 	-D LED_BRIGHTNESS_FACTOR=1.0f
+
+;     -D LED2_DEFAULT_TYPE=WS2812B
+;     -D LED2_DEFAULT_COLOR_ORDER=GRB
+;     -D LED2_DEFAULT_COUNT=20
+
+
+; [env:creatorsnodestrip]
+; extends = creatorsnodebase
+
+; build_flags =
+;     ${creatorsnodebase.build_flags}
+; 	-D BLIP_CREATORSNODESTRIP
+;     -D DEVICE_TYPE="\"Creators Node Strip\""
+; 	-D LED_MAX_COUNT=800
+    
+; 	-DARDUINO_USB_MODE=1
+; 	-DARDUINO_USB_CDC_ON_BOOT=1
+	
+; 	-D LED_EN_NO_OPEN_DRAIN
+; 	-D LED_BRIGHTNESS_FACTOR=0.4f
+;     -D LED_DEFAULT_DATA_PIN=16
+;     -D LED_DEFAULT_TYPE=WS2812B
+;     -D LED_DEFAULT_COUNT=100
+
+; lib_deps = 
+; 	${creatorsnodebase.lib_deps}
+
+; [creatorsbridge]
+; extends = blip, component.net, component.espnow, component.files
+; board = esp32-c6-devkitm-1
+; board_build.mcu = esp32c6
+; board_build.f_cpu = 160000000L 
+; build_flags = 
+; 	${blip.build_flags}
+
+; 	-D ESPNOW_BRIDGE
+; 	-D ESPNOW_PAIRING_PRESSCOUNT=2
+
+; 	-D FILES_TYPE_LittleFS
+
+
+; [env:disneybridgeA0]
+; extends = creatorsbridge, component.button, component.io, component.dipswitch, component.dmx
+; build_flags =
+; 	${creatorsbridge.build_flags}
+; 	-D BLIP_DISNEYBRIDGE
+; 	-D DEVICE_TYPE="\"Flowtoys Disney Bridge\""
+; 	-D DEVICE_CATEGORY="\"General\""
+
+; 	-D VIDS="\"0x303a\""
+; 	-D PIDS="\"0x1001\""
+
+; 	-D ARDUINO_USB_MODE=1
+; 	-D ARDUINO_USB_CDC_ON_BOOT=1
+
+; 	-D BUTTON_MAX_COUNT=1
+; 	-D BUTTON_DEFAULT_PIN=6
+; 	-D BUTTON_DEFAULT_MODE=D_INPUT_PULLDOWN
+
+; 	-D IO_MAX_COUNT=4
+; 	-D IO_DEFAULT_MODE=IOComponent::PinMode::A_OUTPUT
+; 	-D IO_DEFAULT_PIN=1
+
+; 	-D DIPSWITCH_I2C
+; 	-D DIPSWITCH_I2C_PIN_SDA=23
+; 	-D DIPSWITCH_I2C_PIN_SCL=22
+; 	-D DIPSWITCH_INTERRUPT_PIN=21
+; 	-D DIPSWITCH_EXTRA_PIN=19
+
+; 	-D DMX_ACTIVITY_LED_PIN=3
+; 	-D DMX_RECEIVE_PIN=0
+; 	-D DMX_OUTPUT_PIN=4
+; 	-D DMX_ENABLE_PIN=5
+	
+; 	-D DMX_MAX_CHANNELS=10
+; 	-D DMX_ADDRESS_FROM_DIPSWITCH
+
+; lib_deps = 
+; 	${creatorsbridge.lib_deps}
+; 	https://github.com/janelia-arduino/TCA6408.git
+; 	https://github.com/benkuper/EasyDMX.git
 	
 
