--- a/configs/m5stick.ini
+++ b/configs/m5stick.ini
@@ -1,40 +1,24 @@
 
 [m5stickc]
-extends = blip
+extends = blip, component.net, component.m5unified, component.display, component.io, component.button, component.files, component.motion
 board = m5stick-c
 board_build.variant = m5stack_stickc
 board_build.f_cpu = 240000000L
 upload_speed = 1500000
+
 build_flags = 
 	${blip.build_flags}
 	-D BLIP_M5STICKC
-	-D USE_M5UNIFIED
 
-	-D USE_DISPLAY
 	-D DISPLAY_TYPE=M5StickC
-	-D USE_SERIAL
-	-D USE_SERVER
-	-D CONFIG_ASYNC_TCP_RUNNING_CORE=1
-	-D CONFIG_ASYNC_TCP_USE_WDT=0
 	-D DISPLAY_SHOW_DBG
-	-D USE_WIFI
-	-D USE_OSC
-	-D USE_IO
-	-D USE_BUTTON
 	-D BUTTON_MAX_COUNT=2
 	-D BUTTON_DEFAULT_PIN=37
 	-D POWER_WAKEUP_BUTTON=39
 	-D POWER_WAKEUP_BUTTON_STATE=false
-	-D USE_FILES
 	-D FILES_TYPE_LittleFS
-	-D USE_MOTION
+
 	-D IMU_TYPE_M5MPU
-
-
-lib_deps = 
-	${blip.lib_deps}
-	m5stack/M5Unified
-
 
 [env:m5stick-generic]
 extends = m5stickc
