restored defaults to creators ball

--- a/configs/creators.ini
+++ b/configs/creators.ini
@@ -35,16 +35,45 @@ lib_deps =
 
 [env:creatorsball]
 extends = creatorsc6
+build_type = debug
 build_flags =
 	${creatorsc6.build_flags}
 	-D BLIP_CREATORSBALL
 	-D DEVICE_TYPE="\"Creators Ball\""
 
+	; BUTTO
+	-D POWER_WAKEUP_BUTTON=7
+	-D BUTTON_DEFAULT_PIN=7
+	-D BUTTON_DEFAULT_MODE=D_INPUT_PULLDOWN
+	-D BUTTON_DEFAULT_SHUTDOWN=true
+
+	; LED STRIP
 	-D LED_DEFAULT_TYPE=WS2816
 	-D LED_DEFAULT_COLOR_ORDER=GRB
 	-D LED_FIXED_COUNT=37
 	-D LED_DEFAULT_DATA_PIN=3
+	-D LED_DEFAULT_EN_PIN=20
 	-D LED_DEFAULT_DATA_BACKUP_PIN=2
+
+	; FEEDBACK LEDS
+	-D LED_CHARGE_DISABLE_PIN=9
+
+	; IR
+ 	-D IR_DEFAULT_PIN=18
+ 	-D IR_DEFAULT_PIN2=19
+
+	; FILES
+	-D FILES_TYPE_FLASH
+	-D FILES_DEFAULT_MOSI=4
+	-D FILES_DEFAULT_MISO=5
+	-D FILES_DEFAULT_CS=15
+	-D FILES_DEFAULT_SCK=8
+
+	;IMU
+	-D IMU_DEFAULT_SDA=23
+	-D IMU_DEFAULT_SCL=22
+	-D IMU_DEFAULT_INT=-1
+	-D IMU_EXT_CRYSTAL=0x80
 
 lib_deps = 
 	${creatorsc6.lib_deps}
