unityIncludes in blip

--- a/configs/blip.ini
+++ b/configs/blip.ini
@@ -52,7 +52,7 @@ lib_deps =
 	bblanchon/ArduinoJson @ ^6.18.5
 	https://github.com/contrem/arduino-timer
 
-build_src_filter = +<main.cpp> +<UnityIncludes.cpp> +<RootComponent.cpp>
+build_src_filter = +<UnityIncludes.cpp>
 
 
 [c6board]
