fix power keep pin

--- a/configs/creators.ini
+++ b/configs/creators.ini
@@ -41,8 +41,11 @@ build_flags =
 	-D BLIP_CREATORSBALL
 	-D DEVICE_TYPE="\"Creators Ball\""
 
-	; BUTTO
+	; POWER
+ 	-D POWER_KEEP_PIN=1
 	-D POWER_WAKEUP_BUTTON=7
+
+	; BUTTON
 	-D BUTTON_DEFAULT_PIN=7
 	-D BUTTON_DEFAULT_MODE=D_INPUT_PULLDOWN
 	-D BUTTON_DEFAULT_SHUTDOWN=true
