clearSettings keep wifi info

--- a/configs/creators.ini
+++ b/configs/creators.ini
@@ -41,9 +41,12 @@ build_flags =
 	-D BLIP_CREATORSBALL
 	-D DEVICE_TYPE="\"Creators Ball\""
 
-	; POWER
+	; POWER & BATTERY
  	-D POWER_KEEP_PIN=1
 	-D POWER_WAKEUP_BUTTON=7
+	-D BATTERY_DEFAULT_PIN=6
+	-D BATTERY_DEFAULT_CHARGE_PIN=0
+	-D BATTERY_CHARGE_PIN_MODE=INPUT_PULLUP
 
 	; BUTTON
 	-D BUTTON_DEFAULT_PIN=7
@@ -54,7 +57,7 @@ build_flags =
 	-D LED_USE_FASTLED
 	-D LED_DEFAULT_TYPE=WS2816
 	-D LED_DEFAULT_COLOR_ORDER=GRB
-	-D LED_FIXED_COUNT=37
+	-D LED_FIXED_COUNT=1000
 	-D LED_DEFAULT_DATA_PIN=3
 	-D LED_DEFAULT_EN_PIN=20
 	-D LED_DEFAULT_DATA_BACKUP_PIN=2
