--- a/configs/components.ini
+++ b/configs/components.ini
@@ -55,10 +55,8 @@ build_flags =
 	-D PLAYBACK_MAX_SCRIPTS=32
 
 lib_deps =
-	adafruit/Adafruit NeoPixel@^1.10.0
-	adafruit/Adafruit DotStar @ ^1.2.0
 	fastled/FastLED@^3.10.3
-
+	makuna/NeoPixelBus@^2.8.4
 
 
 [pwmled]
