fix null range crash, optimize scripts and heap

--- a/configs/blip.ini
+++ b/configs/blip.ini
@@ -17,6 +17,7 @@ upload_speed = 921600
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 
+board_build.arduino.loop_stack = 32768
 
 extra_scripts = post:tools/merge_bin.py
 
@@ -40,6 +41,8 @@ build_flags =
 	-Wl,-Map,firmware.map        ; emits a useful map to see where IRAM goes
 	; -D CORE_DEBUG_LEVEL=0        ; strip debug
 
+	-D CONFIG_ARDUINO_LOOP_STACK_SIZE=32768
+	
 	${net.build_flags}
 	${files.build_flags}
 
