poebridge new system support

--- a/configs/creators.ini
+++ b/configs/creators.ini
@@ -1,5 +1,5 @@
 [creators]
-extends = blip, ledstrip, artnet, fx, button, battery,  script, motion, espnow, power, ir
+extends = blip, ledstrip, artnet, fx, button, battery, script, motion, espnow, power, ir, ota
 build_flags = 
 	${blip.build_flags}
 	${ledstrip.build_flags}
@@ -12,6 +12,7 @@ build_flags =
 	${espnow.build_flags}
 	${power.build_flags}
 	${ir.build_flags}
+	${ota.build_flags}
 	-D DEVICE_CATEGORY="\"Creators\""
 
 	; LED STRIP : dedicated to props so only one strip
@@ -92,7 +93,7 @@ lib_deps =
 
 [env:creatorsclub]
 extends = creators
-board_build.partitions = huge_app.csv
+; board_build.partitions = huge_app.csv
 
 build_flags =
 	${creators.build_flags}
