--- a/configs/m5.ini
+++ b/configs/m5.ini
@@ -1,5 +1,5 @@
-[m5board]
-extends = blip, component.net, component.m5unified, component.display, component.io, component.button, component.files
+; [m5board]
+; extends = blip, component.net, component.m5unified, component.display, component.io, component.button, component.files
 
 ; [m5stickc]
 ; extends = blip, component.net, component.m5unified, component.display, component.io, component.button, component.files, component.motion
