--- a/configs/m5stick.ini
+++ b/configs/m5stick.ini
@@ -1,24 +1,24 @@
 
-[m5stickc]
-extends = blip, component.net, component.m5unified, component.display, component.io, component.button, component.files, component.motion
-board = m5stick-c
-board_build.variant = m5stack_stickc
-board_build.f_cpu = 240000000L
-upload_speed = 1500000
+; [m5stickc]
+; extends = blip, component.net, component.m5unified, component.display, component.io, component.button, component.files, component.motion
+; board = m5stick-c
+; board_build.variant = m5stack_stickc
+; board_build.f_cpu = 240000000L
+; upload_speed = 1500000
 
-build_flags = 
-	${blip.build_flags}
-	-D BLIP_M5STICKC
+; build_flags = 
+; 	${blip.build_flags}
+; 	-D BLIP_M5STICKC
 
-	-D DISPLAY_TYPE=M5StickC
-	-D DISPLAY_SHOW_DBG
-	-D BUTTON_MAX_COUNT=2
-	-D BUTTON_DEFAULT_PIN=37
-	-D POWER_WAKEUP_BUTTON=39
-	-D POWER_WAKEUP_BUTTON_STATE=false
-	-D FILES_TYPE_LittleFS
+; 	-D DISPLAY_TYPE=M5StickC
+; 	-D DISPLAY_SHOW_DBG
+; 	-D BUTTON_MAX_COUNT=2
+; 	-D BUTTON_DEFAULT_PIN=37
+; 	-D POWER_WAKEUP_BUTTON=39
+; 	-D POWER_WAKEUP_BUTTON_STATE=false
+; 	-D FILES_TYPE_LittleFS
 
-	-D IMU_TYPE_M5MPU
+; 	-D IMU_TYPE_M5MPU
 
-[env:m5stick-generic]
-extends = m5stickc
+; [env:m5stick-generic]
+; extends = m5stickc
