--- a/configs/olimex.ini
+++ b/configs/olimex.ini
@@ -1,8 +1,14 @@
 [olimex]
-extends = blip, component.net, component.ethernet, component.files
+extends = blip, artnet, button, espnow, ota, ethernet
 board = esp32-poe-iso
 build_flags = 
 	${blip.build_flags}
+	${artnet.build_flags}
+	${button.build_flags}
+	${espnow.build_flags}
+	${ota.build_flags}
+	${ethernet.build_flags}
+	
 	-D WIFI_DEFAULT_MODE=MODE_ETH
 	; -D USE_IO
 	; -D USE_BUTTON
@@ -13,10 +19,12 @@ build_flags =
 	-D VIDS="\"0x1a86\""
 	-D PIDS="\"0x7523\""
 	
-
-
+lib_deps = 
+	${blip.lib_deps}
+	${artnet.lib_deps}
+	
 [env:poebridge]
-extends = olimex, component.artnet, component.espnow
+extends = olimex
 
 build_flags = 
 	${olimex.build_flags}
