--- a/configs/blip.ini
+++ b/configs/blip.ini
@@ -27,7 +27,7 @@ build_unflags =
 
 build_flags =	
 	-D ARDUINO_BLIP
-	-D BLIP_VERSION="\"1.1.10\""
+	-D BLIP_VERSION="\"1.2.0b1\""
 
 	-std=c++17
 	-std=gnu++17
