--- a/configs/creators.ini
+++ b/configs/creators.ini
@@ -57,6 +57,7 @@ build_flags =
 	-D BUTTON_DEFAULT_SHUTDOWN=true
 
 	; LED STRIP
+	-D LED_USE_FASTLED
 	-D LED_MODEL_WS2816 ; unique model needed for NeoPixelBus
 	-D LED_FIXED_COUNT=37
 	-D LED_DEFAULT_DATA_PIN=3
