--- a/platformio.ini
+++ b/platformio.ini
@@ -19,5 +19,6 @@ extra_configs =
 	configs/m5stick.ini
 	configs/olimex.ini
 	configs/xiaoc6.ini
+	configs/specials.ini
 	
-default_envs = creatorsball
+default_envs = disneybridgeA0
