many fixes, FlowtoysConnectComponent

--- a/configs/specials.ini
+++ b/configs/specials.ini
@@ -1,21 +1,19 @@
 [env:disneybridgeA0]
-extends = blip, c6board, artnet, button, espnow, ota, ethernet, rf24, dipswitch
-board = esp32-poe-iso
+extends = blip, c6board, artnet, button, io, ota, rf24, dipswitch, dmx
 build_flags = 
 	${blip.build_flags}
     ${c6board.build_flags}
 	${artnet.build_flags}
 	${button.build_flags}
-	${espnow.build_flags}
 	${ota.build_flags}
-	${ethernet.build_flags}
     ${rf24.build_flags}
     ${dipswitch.build_flags}
+	${dmx.build_flags}
+	${io.build_flags}
 
 	-D DEVICE_TYPE="\"Flowtoys Disney Bridge\""
 	-D DEVICE_CATEGORY="\"Flowtoys\""
 
-	-D WIFI_DEFAULT_MODE=MODE_ETH
 	-D FILES_TYPE_LittleFS
 
 	-D VIDS="\"0x303a\""
@@ -24,9 +22,9 @@ build_flags =
     -D ARDUINO_USB_MODE=1
 	-D ARDUINO_USB_CDC_ON_BOOT=1
 
-	-D BUTTON_MAX_COUNT=1
 	-D BUTTON_DEFAULT_PIN=6
-	-D BUTTON_DEFAULT_MODE=D_INPUT_PULLDOWN
+	-D BUTTON_DEFAULT_MODE=D_INPUT_PULLUP
+	-D BUTTON_DEFAULT_INVERTED=true
 
 	-D IO_MAX_COUNT=4
 	-D IO_DEFAULT_MODE=IOComponent::PinMode::A_OUTPUT
@@ -54,8 +52,12 @@ build_flags =
     -D RF24_DEFAULT_SPI_MOSI=15
     -D RF24_DEFAULT_SPI_SCK=8
 
+	-D IO_DEFAULT_PIN=1
+	-D IO_DEFAULT_MODE=IOComponent::PinMode::A_OUTPUT
+
 lib_deps = 
 	${blip.lib_deps}
 	${artnet.lib_deps}
     ${rf24.lib_deps}
     ${dipswitch.lib_deps}
+	${dmx.lib_deps}
